<resources>
    <string name="app_name">MLB Center</string>

    <string-array name="main_menu_title">
        <item>Scores</item>
        <item>News</item>
        <item>Statistics</item>
        <item>Standings</item>
        <item>Schedule</item>
        <item>Players</item>
        <item>Teams</item>
    </string-array>

    <string-array name="main_menu_key">
        <item>Scores</item>
        <item>News</item>
        <item>Statistics</item>
        <item>Standings</item>
        <item>Schedule</item>
        <item>Players</item>
        <item>Teams</item>
    </string-array>

    <string name="AVG">AVG</string>
    <string name="HR">HR</string>

    <string-array name="statistics_menu_key">
        <item>@string/AVG</item>
        <item>@string/HR</item>
        <item>RBI</item>
        <item>SB</item>
        <item>R</item>
        <item>OBP</item>
        <item>SLG</item>
        <item>OPS</item>
        <item>H</item>
        <item>2B</item>
        <item>3B</item>
        <item>BB</item>
    </string-array>

    <string-array name="statistics_menu_title">
        <item>Batting Average</item>
        <item>Home Run</item>
        <item>Run Batted In</item>
        <item>Stolen Base</item>
        <item>Run</item>
        <item>On Base Average</item>
        <item>Slugging Average</item>
        <item>On-base plus slugging</item>
        <item>Hit</item>
        <item>Double</item>
        <item>Triple</item>
        <item>Walk</item>
    </string-array>

    <string-array name="mlb_teams">
        <item>All</item>
        <item>AL</item>
        <item>NL</item>
        <item>ARI</item>
        <item>ATL</item>
        <item>BAL</item>
        <item>BOS</item>
        <item>CHC</item>
        <item>CWS</item>
        <item>CIN</item>
        <item>CLE</item>
        <item>COL</item>
        <item>DET</item>
        <item>FLA</item>
        <item>HOU</item>
        <item>KAN</item>
        <item>LAA</item>
        <item>LAD</item>
        <item>MIL</item>
        <item>MIN</item>
        <item>NYM</item>
        <item>NYY</item>
        <item>OAK</item>
        <item>PHI</item>
        <item>PIT</item>
        <item>SD</item>
        <item>SF</item>
        <item>SEA</item>
        <item>STL</item>
        <item>TB</item>
        <item>TEX</item>
        <item>TOR</item>
        <item>WAS</item>
    </string-array>


    <string name="mysportsfeeds_version">v1.1</string>
    <string name="mysportsfeeds_url">https://api.mysportsfeeds.com/{versionNumber}/pull/mlb/{seasonName}/{feeds}</string>
    <string name="version_number">versionNumber</string>
    <string name="season_name">seasonName</string>
    <string name="feeds">feeds</string>
    <string name="feeds_overall_team_standings">overall_team_standings.json</string>
    <string name="feeds_conference_team_standings">conference_team_standings.json</string>
    <string name="feeds_division_team_standings">division_team_standings.json</string>
    <string name="feeds_game_boxscore">game_boxscore.json</string>
    <string name="feeds_scoreboard">scoreboard.json</string>
    <string name="feeds_cumulative_player_stats">cumulative_player_stats.json</string>
    <string name="feeds_cumulative_player_stats_homeruns">cumulative_player_stats.json?sort=stats.HR.D&amp;playerstats=HR&amp;limit=2</string>
    <string name="feeds_cumulative_player_stats_batting_average">cumulative_player_stats.json?sort=stats.AVG.D&amp;playerstats=AVG,PA&amp;limit=100</string>
    <string name="feeds_roster_players">roster_players.json</string>

    <string name="for_date">fordate</string>
    <string name="current_year">2017</string>
    <string name="regular">regular</string>
    <string name="playoff">playoff</string>
    <string name="sort">team.abbr.A</string>
    
    <string name="standings_standings">Standings</string>
    <string name="standings_division_title_team_name"></string>
    <string name="standings_division_title_wins">W</string>
    <string name="standings_division_title_lost">L</string>
    <string name="standings_division_title_percentage">Pct</string>
    <string name="standings_division_title_gamesback">GB</string>
    <string name="standings_division_title_runsfor">RF</string>
    <string name="standings_division_title_runsagainst">RA</string>

</resources>
