<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="5dp"
    android:weightSum="8.0"
    android:background="@android:color/holo_blue_light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/standings_title_team_name_text_view"
        android:text="@string/standings_division_title_team_name"
        android:textStyle="bold"
        android:layout_weight="2.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_wins_text_view"
        android:text="@string/standings_division_title_wins"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_lost_text_view"
        android:text="@string/standings_division_title_lost"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_percentage_text_view"
        android:text="@string/standings_division_title_percentage"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_gamesback_text_view"
        android:text="@string/standings_division_title_gamesback"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_runs_for_text_view"
        android:text="@string/standings_division_title_runsfor"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/standings_title_runs_against_text_view"
        android:text="@string/standings_division_title_runsagainst"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.0"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />

</LinearLayout>
